--- a/roles/nginx/tasks/ubuntu.yml
+++ b/roles/nginx/tasks/ubuntu.yml
@@ -15,9 +15,9 @@
     state: absent
     force: true
 
-- name: Copy server config
-  ansible.builtin.copy:
-    src: "{{ role_path }}/files/{{ nginx_server_name }}"
+- name: Build server configs
+  ansible.builtin.template:
+    src: "{{ nginx_server_name }}.j2"
     dest: "/etc/nginx/sites-available/{{ nginx_server_name }}"
     mode: '0644'
   register: nginx
@@ -30,7 +30,7 @@
     force: true
 
 - name: Test nginx
-  when: nginx.changed
+  when: nginx.changed or nginx_force_restart
   ansible.builtin.shell:
     cmd: sudo nginx -t
   register: test
