--- a/roles/certbot/tasks/main.yml
+++ b/roles/certbot/tasks/main.yml
@@ -37,7 +37,11 @@
 
 - name: Do renew dry run
   ansible.builtin.shell:
-    cmd: sudo certbot certonly --dry-run --dns-cloudflare --dns-cloudflare-credentials /etc/letsencrypt/cloudflare.ini -d "{{ certbot_domain }}" -d "*.{{ certbot_domain }}" -m {{ certbot_email }}
+    cmd: |
+      sudo certbot certonly --dry-run --dns-cloudflare \
+        --dns-cloudflare-credentials /etc/letsencrypt/cloudflare.ini \
+        --dns-cloudflare-propagation-seconds 20 \
+        -d "{{ certbot_domain }}" -d "*.{{ certbot_domain }}" -m {{ certbot_email }}
   register: dry_run
   failed_when: dry_run.rc != 0
   changed_when: false
