--- a/roles/ufw/tasks/ubuntu.yml
+++ b/roles/ufw/tasks/ubuntu.yml
@@ -3,16 +3,11 @@
     name: ufw
     state: latest
 
-- name: Enable rate-limiting on ssh
-  community.general.ufw:
-    rule: limit
-    port: ssh
-    proto: tcp
-
 - name: Allow ssh port
   community.general.ufw:
-    rule: allow
-    port: "{{ ansible_port }}"
+    rule: limit
+    port: "{{ default_ssh_port }}"
+    proto: tcp
 
 - name: Allow 443
   community.general.ufw:
