--- a/homelab.yml
+++ b/homelab.yml
@@ -34,6 +34,7 @@ on_prem:
     nassau:
     oasis:
     pisco:
+    cosa:
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # cloud infrastructure
@@ -56,3 +57,4 @@ proxmox:
     nassau:
     oasis:
     pisco:
+    cosa:
