--- a/homelab.yml
+++ b/homelab.yml
@@ -35,6 +35,7 @@ on_prem:
     oasis:
     pisco:
     cosa:
+    odin:
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # cloud infrastructure
@@ -58,3 +59,4 @@ proxmox:
     oasis:
     pisco:
     cosa:
+    odin:
